--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,31 @@ table {
   padding: 10px 0;
   font-weight: 400;
 } */
+
+
+.card-group{
+  display: grid !important;
+  gap: 1em;
+  grid-template-columns: repeat(4,1fr) !important;
+}
+.film-img img{
+  width: max(100%, 220px);
+  aspect-ratio: 1/1.3;
+  object-fit: cover;
+
+}
+.img-wrapper{
+  width: 100%;
+  aspect-ratio: 1/1.3;
+  overflow: hidden;
+
+}
+.card-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: .34s;
+}
+.card:hover .card-img{
+  scale: 1.07;
+}
